2000-08-15  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/xstatconv.c: New file.
	* sysdeps/mach/hurd/fxstat64.c: New file.
	* sysdeps/mach/hurd/lxstat64.c: New file.
	* sysdeps/mach/hurd/xstat64.c: New file.
	* sysdeps/mach/hurd/Dist: Add xstatconv.c.

2000-08-15  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/dl-sysdep.c (__libc_multiple_libcs):
	Initialize, needed for change in common symbol handling in newer
	binutils.  Mirrors 2000-01-03 change made by Andreas Schwab.

2000-08-15  Ulrich Drepper  <drepper@redhat.com>

	* elf/constload1.c: Call mtrace.  Check return value of dlclose call.
	* elf/constload2.c: Add destructor to unload constload3.

	* include/link.h: Include sysd-link.h.
	* sysdeps/generic/sysd-link.h: New file.
	* sysdeps/unix/sysv/linux/sysd-link.h: New file.
	* elf/Makefile (distribute): Add sysd-link.h.
	* elf/dl-load.c: Use definitions from sysd-link.h instead of stat
	types and functions directly.
	* elf/dl-misc.c: Likewise.
	* elf/dl-profile.c: Likewise.

	* elf/loadfail.c (main): Close all successfully loaded objects.

	* elf/multiload.c: Add mtrace call.  Call dlclose for all handles and
	free wd.
	* elf/dl-deps.c (_dl_map_object_deps): Don't allocate needed list if
	there is already one.

	* elf/dl-close.c: Pretty print.

2000-08-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/ttyname.c: Make name variable from getttyname function
	global (with file scope).  Add __libc_subfreeres function to free the
	string.
	* sysdeps/unix/sysv/linux/ttyname.c: Likewise.  Also for buf variable
	in ttyname function.

	* sysdeps/generic/strtok.c: Remove initializer for olds variable.

	* crypt/md5-crypt.c: Let destructor deallocate static buffer.

	* iconvdata/sjis.c (from_ucs4_lat1): Handle U005C and U007E by
	mapping them to /x5c and /x7e respectively.

	* locale/programs/ld-ctype.c: Add support for more definitions after
	copy statement.

2000-08-14  Jakub Jelinek  <jakub@redhat.com>
